--- a/components/go-app-0325-newacs/overlays/development/deployment-patch.yaml
+++ b/components/go-app-0325-newacs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-app-0325-newacs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/yangcao/go-app-0325-newacs:291b900489a1fd33fe42bf21e58aaa83bc6c5346@sha256:b1e4d57031dd78590e0fe7730b441a5c90e4f6d31fc9f0c1d4da271c45d1159f
+          name: container-image
